hphp/hack/test/extended_reasons/num.php.diff.exp
--- control

+++ test

@@ -1,34 +1,44 @@

 error: Typing[4110] Invalid return type [1]
 -> Expected string [2]
 -> But got float because this is the result of an arithmetic operation with a num as the second argument, and no floats. [1]
--> Here is why I think the argument is a num: this is a num [3]
+-> Here is why I think the argument is a num: this is a num because this is the result of an arithmetic operation with a num as the second argument, and no floats. [3]
+-> Here is why I think the argument is a num: this is a num because this is the result of an arithmetic operation with a num as the second argument, and no floats. [4]
+-> Here is why I think the argument is a num: this is a num because this is the result of an arithmetic operation with a num as the first argument, and no floats. [5]
+-> Here is why I think the argument is a num: this is a num because this is the result of an arithmetic operation with a num as the second argument, and no floats. [6]
+-> Here is why I think the argument is a num: this is a num because this is the result of an arithmetic operation with a num as the second argument, and no floats. [7]
+-> Here is why I think the argument is a num: this is a num [8]
 
 hphp/hack/test/extended_reasons/num.php:9:10
       1 | <?hh
       2 | 
-[2,3] 3 | function foo(num $n): string {
-      4 |   $x = 5 + $n;
-      5 |   $x = 5 + $x;
-      6 |   $x = $x + 5;
-      7 |   $x = 5 + $x;
-      8 |   $x = 5 + $x;
+[2,8] 3 | function foo(num $n): string {
+[7]   4 |   $x = 5 + $n;
+[6]   5 |   $x = 5 + $x;
+[5]   6 |   $x = $x + 5;
+[4]   7 |   $x = 5 + $x;
+[3]   8 |   $x = 5 + $x;
 [1]   9 |   return 5 + $x;
      10 | }
 
 error: Typing[4110] Invalid return type [1]
 -> Expected string [2]
 -> But got int because this is the result of an arithmetic operation with a num as the second argument, and no floats. [1]
--> Here is why I think the argument is a num: this is a num [3]
+-> Here is why I think the argument is a num: this is a num because this is the result of an arithmetic operation with a num as the second argument, and no floats. [3]
+-> Here is why I think the argument is a num: this is a num because this is the result of an arithmetic operation with a num as the second argument, and no floats. [4]
+-> Here is why I think the argument is a num: this is a num because this is the result of an arithmetic operation with a num as the first argument, and no floats. [5]
+-> Here is why I think the argument is a num: this is a num because this is the result of an arithmetic operation with a num as the second argument, and no floats. [6]
+-> Here is why I think the argument is a num: this is a num because this is the result of an arithmetic operation with a num as the second argument, and no floats. [7]
+-> Here is why I think the argument is a num: this is a num [8]
 
 hphp/hack/test/extended_reasons/num.php:9:10
       1 | <?hh
       2 | 
-[2,3] 3 | function foo(num $n): string {
-      4 |   $x = 5 + $n;
-      5 |   $x = 5 + $x;
-      6 |   $x = $x + 5;
-      7 |   $x = 5 + $x;
-      8 |   $x = 5 + $x;
+[2,8] 3 | function foo(num $n): string {
+[7]   4 |   $x = 5 + $n;
+[6]   5 |   $x = 5 + $x;
+[5]   6 |   $x = $x + 5;
+[4]   7 |   $x = 5 + $x;
+[3]   8 |   $x = 5 + $x;
 [1]   9 |   return 5 + $x;
      10 | }
 